test/classes/diten/error_default_field_init.good
error_default_field_init.chpl:7: error: Cannot initialize 'xx' of type int(64) from a 'real(64)'
